--- a/src/App.css
+++ b/src/App.css
@@ -171,6 +171,68 @@ img {
   background-color: #1c6a9e; /* クリック時にさらに濃くする */
 }
 
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-content {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 10px;
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  z-index: 1001;
+  transition: transform 0.2s ease;
+}
+
+.close:hover {
+  transform: scale(1.2); /* ホバー時に少し拡大 */
+}
+
+.close:before,
+.close:after {
+  content: "";
+  position: absolute;
+  width: 20px; /* Xの線の長さ */
+  height: 2px; /* 線の太さ */
+  background-color: white; /* 線の色 */
+  transition: background-color 0.2s ease;
+}
+
+.close:before {
+  transform: rotate(45deg); /* Xの一部 */
+}
+
+.close:after {
+  transform: rotate(-45deg); /* Xのもう一部 */
+}
+
+.close:hover:before,
+.close:hover:after {
+  background-color: #f44336; /* ホバー時に色を変更（赤色） */
+}
+
 @media (max-width: 768px) {
   .title-heading {
     font-size: 2rem;
@@ -193,4 +255,16 @@ img {
   .photo-list {
     column-count: 2;
   }
+  .modal-content {
+    max-width: 90%; /* モバイルではモーダル画像の幅を画面いっぱいに */
+    max-height: 80%; /* 縦の高さも少し縮小 */
+    border-radius: 5px; /* 角丸を少し小さくする */
+  }
+
+  .close {
+    top: 10px;
+    right: 20px;
+    font-size: 1.5rem; /* モバイルでは閉じるボタンを少し小さく */
+  }
 }
+
